[project]
name = "laive-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Villalobos",email = "wilverpaul@gmail.com"}
]
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
name = "laive-api"
version = "0.1.0"
description = ""
authors = ["Paul Villalobos <wilverpaul@gmail.com>"]
packages = [{include = "laive", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.1"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
dev = "uvicorn laive.api.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
